--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,23 @@
 pandas
 plotly
-streamlit
 yfinance
 pandas-datareader
 prophet
 openai
+base64
+html
+io
+re
+time
+streamlit
+azure.ai.formrecognizer
+azure.core.credentials
+azure.identity
+azure.search.documents
+azure.storage.blob
+pypdf
+tenacity
+os
+tempfile
+tiktoken
+json
