--- a/requirements.txt
+++ b/requirements.txt
@@ -1,22 +1,12 @@
-pandas
-plotly
-yfinance
-pandas-datareader
-prophet
-openai
-html
-io
-re
-time
 streamlit
-azure.ai.formrecognizer
-azure.core.credentials
-azure.identity
-azure.search.documents
+pandas==1.5.3
+pandas-datareader==0.10.0
+openai==0.27.0
+streamlit==1.18.1
+azure-ai-formrecognizer==3.2.0
+azure-identity==1.12.0
+azure-search-documents==11.4.0
 azure-storage-blob==12.14.1
-pypdf
-tenacity
-os
-tempfile
-tiktoken
-json
+pypdf2==3.0.1
+tenacity==8.2.2
+tiktoken==0.3.3
