--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
+pandas
+plotly
+yfinance
+pandas-datareader
+prophet
+openai==v0.28
 streamlit
-pandas==1.5.3
-pandas-datareader==0.10.0
-openai==0.27.0
-streamlit==1.18.1
-azure-ai-formrecognizer==3.2.0
-azure-identity==1.12.0
-azure-search-documents==11.4.0
+azure.search.documents==11.4.0b6
+tenacity
+tiktoken
+azure-ai-formrecognizer==3.2.1
 azure-storage-blob==12.14.1
-pypdf2==3.0.1
-tenacity==8.2.2
-tiktoken==0.3.3
+azure-identity==1.13.0
+langchain==0.0.236
